--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5000
-DB_HOST = 127.0.0.1:3306
-DB_NAME = ecommerce
-DB_USER = root
-DB_PASSWORD = root
+DB_HOST = sql11.freesqldatabase.com:3306
+DB_NAME = sql11522420
+DB_USER = sql11522420
+DB_PASSWORD = xMEVl5tbtz
 
 
 
