cart crud done!!

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 PORT=5000
-DB_HOST =sql11.freesqldatabase.com
-DB_NAME =sql11522420
-DB_USER =sql11522420
-DB_PASSWORD =xMEVl5tbtz
+DB_HOST =localhost
+DB_NAME =e-commerce
+DB_USER =root
+DB_PASSWORD =
+
 
 
 
